# CAjedrez

./: .gitignore  Archer.cpp  Archer.h  Army.cpp  Army.h  Board.cpp  Board.h  CMakeLists.txt  Client.cpp  CommProtocol.h  Game.cpp  Game.h  GenericUnit.cpp  GenericUnit.h  Horse.cpp  Horse.h  Host.cpp  Host.h  King.cpp  King.h  ListenerThread.cpp  ListenerThread.h  MagicChess.pro  MagicChess.pro.user.646c051  MagicChess.pro.user.db2de85  Menu.cpp  Menu.h  Multiplayer.cpp  Multiplayer.h  SocketHelper.cpp  SocketHelper.h  Soldier.cpp  Soldier.h  TerrainMap.cpp  TerrainMap.h  Unit.cpp  Unit.h  UnitList.h  UnitMap.cpp  UnitMap.h  (+8 more)
Multiplayer/: Client.cpp  Client.h  Host.cpp  Host.h  MultiplayerBoard.cpp  MultiplayerBoard.h  MultiplayerGame.cpp  MultiplayerGame.h  SocketHelper.cpp  SocketHelper.h
Other/: ToDo
Terrain/: Terrain.cpp  Terrain.h  TerrainList.h  TerrainNames.h
Terrain/Types/: Plains.cpp  Plains.h  Rocks.cpp  Rocks.h
UI/: UIBoard.cpp  UIBoard.h  UIButtonLogic.cpp  UIButtonLogic.h  UIGame.cpp  UIGame.h
Units/: Army.cpp  Army.h  Unit.cpp  Unit.h  UnitList.h  UnitNames.h
Units/Classes/: Archer.cpp  Archer.h  Horse.cpp  Horse.h  King.cpp  King.h  Soldier.cpp  Soldier.h
